--- a/projet-web/package.json
+++ b/projet-web/package.json
@@ -16,6 +16,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "bootstrap-icons": "^1.3.0"
+        "bootstrap-icons": "^1.3.0",
+        "bootstrap-modal": "^2.2.4",
     }
 }
