--- a/projet-web/package.json
+++ b/projet-web/package.json
@@ -17,6 +17,6 @@
     },
     "dependencies": {
         "bootstrap-icons": "^1.3.0",
-        "bootstrap-modal": "^2.2.4",
+        "bootstrap-modal": "^2.2.4"
     }
 }
