--- a/projet/.env
+++ b/projet/.env
@@ -25,7 +25,7 @@ APP_SECRET=8db30d7790c66bcffc9e6d926d569ce8
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:chichi77@127.0.0.1:3306/gestioncommu?serverVersion=5.7"
+DATABASE_URL="mysql://user:password@127.0.0.1:3306/db?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
